--- a/votos/index.html
+++ b/votos/index.html
@@ -55,7 +55,7 @@
     <div class="robot">
         <img src="robot.png" alt="Robot">
         <div class="dialogo">
-            <p id="mensaje">¡Hola! Soy el asistente del Instituto. ¿Necesitas ayuda?</p>
+            <p id="mensaje"></p>
             <button id="siguiente">Siguiente</button>
         </div>
     </div>
